# swedish-de-hyphenator

./: LICENSE  README.md  pyproject.toml  swe-de-hyphenator.py  swedish_dehyphenator.py
.github/workflows/: release.yml
docs/: index.html  search.js  swedish_dehyphenator.html
docs/swedish_dehyphenator/: config.html  index.html  swedish_dehyphenator.html
swedish_dehyphenator/: config.py  swedish_dehyphenator.py
